# Ai-Link

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.standalone  LICENSE  README.md  ROADMAP.md  competitive_analysis_2025.md.resolved  docker-compose.yml  entrypoint.sh  final_audit.md  final_audit_report.md  release_notes.md
gateway/: Cargo.toml  DECISIONS.md  Dockerfile
gateway/.sqlx/: query-10cd1fb53fa99cf7415101e4c019c8631012009eb69cc3bcc9b7e71a0bdfc9b6.json  query-16e8f85665658dd74e6bf16420d05bb432d6ed68219f2b35c6283b12dad05c81.json  query-1b33515519835b978c56d4b389fe4962fc89dbd8e480dfe24f514c987f59b38d.json  query-1f70a97dd23bdb89a2fcdd6ef9f981448a66c775ae1d93137a30186e4d2c97f0.json  query-21998e47eff3422350930780f3c1c434ed7994ecee1412191982783c8f5ad224.json  query-37b4c13f55fa15e8565dec8009251e55dfefbce1176e35731fb57e50f1e9c70b.json  query-4e7d5962b283ea299545430891a24c985118683c8233614ab1633e042973afb4.json  query-a03415044417a5fed56d5ef2a40ab1e26e2d53cc4a0d1454719e875373c0ed29.json  query-b7e1146163c158e47a840fab6dbfb58a98ecd7aedfa0069c3a2c8da49b16b954.json  query-be0689b159eeb8af7c35e5e3447cf592696f3acb0aa46a9e43ad716b33235408.json  query-df26336611498dac2bca971da2e1186dafdafa08e7acfe30acab3414ece90657.json  query-e92ac828bbf39cdf0a645915e06e03d36ce1c6ad6349a7aa24685b60c72921fe.json
gateway/migrations/: 001_organizations.sql  002_credentials.sql  003_tokens_policies.sql  004_approvals_rotation.sql  005_audit_logs.sql  006_shadow_violations.sql  007_injection_config.sql  008_observability.sql  009_add_policy_phase.sql  010_add_policy_retry.sql  011_policy_versions.sql  012_notifications.sql  013_service_registry.sql  014_api_keys.sql  015_optional_credential.sql  016_llm_observability.sql  017_response_cache.sql  018_loadbalancing.sql  019_model_aliases.sql  020_router_info.sql  021_webhooks.sql  022_model_pricing.sql  023_system_settings.sql  024_webhook_signing.sql  025_experiment_tracking.sql  026_budget_alerts.sql  027_circuit_breaker.sql  028_spend_cap_lifetime.sql  029_custom_properties.sql  030_tool_call_details.sql  031_pii_token_vault.sql  032_sessions.sql  033_oidc_providers.sql  034_model_access_groups.sql  035_teams.sql  036_token_model_access.sql  037_mcp_servers.sql  038_mcp_tool_policies.sql  039_prompt_management.sql  040_policy_streaming_flag.sql  (+1 more)
gateway/src/: cache.rs  cli.rs  config.rs  errors.rs  lib.rs  main.rs  rotation.rs  utils.rs
gateway/src/api/: analytics.rs  config.rs  experiment_handlers.rs  guardrail_presets.rs  handlers.rs  mcp_handlers.rs  mod.rs  prompt_handlers.rs
gateway/src/jobs/: approval_expiry.rs  budget_checker.rs  cleanup.rs  mod.rs  session_cleanup.rs
gateway/src/mcp/: client.rs  mod.rs  oauth.rs  registry.rs  types.rs
gateway/src/middleware/: anomaly.rs  audit.rs  datadog.rs  engine.rs  external_guardrail.rs  fields.rs  guardrail.rs  hitl.rs  idempotency.rs  key_inject.rs  langfuse.rs  mcp.rs  metrics.rs  mod.rs  model_access.rs  observer.rs  oidc.rs  pii_vault.rs  (+8 more)
gateway/tests/: adversarial_integration.rs  adversarial_unit.rs  chaos_tests.rs  enterprise_features.rs  full_path.rs  integration.rs  observability.rs  rbac_teams_lb.rs  security_and_prompts.rs
sdk/python/: README.md  pyproject.toml
(+311 files in other folders)
