[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
description = "AIlink — Secure API Gateway for AI Agents"

[lib]
name = "gateway"
path = "src/lib.rs"

[[bin]]
name = "ailink"
path = "src/main.rs"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout", "limit", "load-shed"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full", "set-header", "request-id"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "rust_decimal"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
dashmap = "5"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# crypto
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

# utilities
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
rust_decimal = { version = "1.33", features = ["db-postgres"] }
async-trait = "0.1"
dotenvy = "0.15"
hex = "0.4"
urlencoding = "2"
zeroize = "1"
sha2 = "0.10"
subtle = "2"
url = "2"

# upstream proxy
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }

# streams
futures = "0.3"
tokio-stream = "0.1"

# policy matching
regex = "1"
once_cell = "1.18"

# resilience
reqwest-middleware = "0.2"
reqwest-retry = "0.2"

# opentelemetry
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14"
tracing-opentelemetry = "0.22"
bytes = "1.11.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true    # Enable Link Time Optimization.
codegen-units = 1 # Maximize size reduction optimization

